EZ setup complete and working

--- a/framework/index.html
+++ b/framework/index.html
@@ -15,7 +15,7 @@
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,300,400,700'>
   
   <!-- Gobal App CSS -->
-  <link rel='stylesheet' href='scss/app.scss'>
+  <link rel='stylesheet' href='styles/css/app.css'>
 
   <!-- Modernizr for old browser support -->
   <script src='https://cdn2.editmysite.com/js/vendor/modernizr.js'></script>
