building EZ as per psd

--- a/framework/index.html
+++ b/framework/index.html
@@ -17,10 +17,29 @@
   <!-- Gobal App CSS -->
   <link rel='stylesheet' href='styles/css/app.css'>
 
-  <!-- Modernizr for old browser support -->
+  <!-- Modernizr -->
   <script src='https://cdn2.editmysite.com/js/vendor/modernizr.js'></script>
 </head>
 <body>
-  <h1>testing</h1>
+  <main class='container'>
+    <header class='cover'>
+      <figure class='bg fade' style='background-image:url(img/bg.jpg)'>
+        <figcaption>
+          <h1 class='cover__title'>Style Framework</h1>
+          <h2 class='cover__subtitle'>2015</h2>
+        </figcaption>
+      </figure>
+      <nav class='left'>
+        <i class='w-icon-hamburger'></i>Menu
+      </nav>
+      <figure class='logo'>
+        <i class='w-icon-li-weebly-logo'></i>
+      </figure>
+      <nav class='right'>
+        <button class='white'>Log in</button>
+        <button class='white'>Sign up</button>
+      </nav>
+    </header>
+  </main>
 </body>
 </html>
