ADDING: logic for x amount of tabs; ASIDE ready

--- a/framework/index.html
+++ b/framework/index.html
@@ -51,25 +51,25 @@
         <li class='item'>
           <a href='#colors' class='link--header' title='Colors'>Colors</a>
           <ul class='menu--sidebar--sub'>
-            <li class='item'><a href='#palettes' class='link--sub' title='Palettes'>Palettes</a></li>
-            <li class='item'><a href='#uicolors' class='link--sub' title='UI Colors'>UI Colors</a></li>
+            <li class='item--sub'><a href='#palettes' class='link--sub' title='Palettes'>Palettes</a></li>
+            <li class='item--sub'><a href='#uicolors' class='link--sub' title='UI Colors'>UI Colors</a></li>
           </ul>
         </li>
 
         <li class='item'>
           <a href='#colors' class='link--header' title='Typography'>Typography</a>
           <ul class='menu--sidebar--sub'>
-            <li class='item'><a href='#heading' class='link--sub' title='Heading'>Heading</a></li>
-            <li class='item'><a href='#other' class='link--sub' title='Other'>Other</a></li>
+            <li class='item--sub'><a href='#heading' class='link--sub' title='Heading'>Heading</a></li>
+            <li class='item--sub'><a href='#other' class='link--sub' title='Other'>Other</a></li>
           </ul>
         </li>
 
         <li class='item'>
           <a href='#colors' class='link--header' title='Iconography'>Iconography</a>
           <ul class='menu--sidebar--sub'>
-            <li class='item'><a href='#elements' class='link--sub' title='Elements'>Elements</a></li>
-            <li class='item'><a href='#featured' class='link--sub' title='Featured'>Featured</a></li>
-            <li class='item'><a href='#interface' class='link--sub' title='Interface'>Interface</a></li>
+            <li class='item--sub'><a href='#elements' class='link--sub' title='Elements'>Elements</a></li>
+            <li class='item--sub'><a href='#featured' class='link--sub' title='Featured'>Featured</a></li>
+            <li class='item--sub'><a href='#interface' class='link--sub' title='Interface'>Interface</a></li>
           </ul>
         </li>
       </ul>
