ADDING: modal input, animations, and focus on fields

--- a/framework/index.html
+++ b/framework/index.html
@@ -227,14 +227,14 @@
         <button class='blue--borderless right'>Action</button>
       </header>
       <div class='modal__content'>
-        <h2 class='title'>view title</h2>
-        <h3 class='subtitle'>view title</h3>
+        <h2 class='title'>Message goes here.</h2>
+        <h3 class='subtitle'>Sub message goes here.</h3>
         <form class='modal__form'>
-          <label for='name'>
+          <label for='name' class='modal__label'>
             Full Name
             <input type='text' name='name' class='modal__input' placeholder='First and last name'>
           </label>
-          <label for='email'>
+          <label for='email' class='modal__label'>
             Email
             <input type='text' name='email' class='modal__input' placeholder='name@email.com'>
           </label>
