--- a/framework/index.html
+++ b/framework/index.html
@@ -83,7 +83,7 @@
         </header>
 
         <div class='body'>
-          <button class='blue' data-action='openModal'>Modal</button>
+          <button class='blue' data-modal-open>Modal</button>
         </div>
       </article>
     </section>
@@ -221,27 +221,68 @@
   <section class='modal'>
     <figure class='modal__bg'></figure>
     <div class='modal__container'>
-      <header class='modal__header'>
-        <button class='gray--light--borderless left'>X</button>
-        <h1 class='title'>view title</h1>
-        <button class='blue--borderless right'>Action</button>
+
+      <header class='modal__headers'>
+        <div class='modal__header' data-modal-name='single'>
+          <button class='gray--light--borderless left' data-modal-close>X</button>
+          <h1 class='title'>Welcome Title</h1>
+          <button class='blue--borderless right'>Action</button>
+        </div>
+
+        <div class='modal__header' data-modal-name='slide'>
+          <button class='gray--light--borderless left' data-modal-switch='single'><i class='w-icon-chevron-left-light'></i></button>
+          <h1 class='title'>View Title</h1>
+        </div>
+
+        <div class='modal__header' data-modal-name='action'>
+          <button class='blue--borderless left' data-modal-switch='slide'>Cancel</button>
+          <h1 class='title'>Action Title</h1>
+          <button class='blue--borderless right'>Save</button>
+        </div>
+
+        <div class='modal__header' data-modal-name='progress'>
+          <button class='gray--light--borderless left' data-modal-switch='action'><i class='w-icon-chevron-left-light'></i></button>
+          <h1 class='title'>Progress Title</h1>
+          <button class='blue--borderless right'>next</button>
+        </div>
       </header>
-      <div class='modal__content'>
-        <h2 class='title'>Message goes here.</h2>
-        <h3 class='subtitle'>Sub message goes here.</h3>
-        <form class='modal__form'>
-          <label for='name' class='modal__label'>
-            Full Name
-            <input type='text' name='name' class='modal__input' placeholder='First and last name'>
-          </label>
-          <label for='email' class='modal__label'>
-            Email
-            <input type='text' name='email' class='modal__input' placeholder='name@email.com'>
-          </label>
-          <button class='modal__button' data-value='Selected Option'><i class='right'>></i> Options</button>
-          <button class='modal__button--action'>Action Button</button>
+
+      <div class='modal__contents'>
+        <div class='modal__content' data-modal-name='single'>
+          <h2 class='title'>Message goes here.</h2>
+          <h3 class='subtitle'>Sub message goes here.</h3>
+          <form class='modal__form'>
+            <label for='name' class='modal__label'>
+              Full Name
+              <input type='text' name='name' class='modal__input' placeholder='First and last name'>
+            </label>
+            <label for='email' class='modal__label'>
+              Email
+              <input type='text' name='email' class='modal__input' placeholder='name@email.com'>
+            </label>
+            <button class='modal__button--dropdown' data-value='Selected Option'><i class='w-icon-chevron-right-light right'></i> Options</button>
+            <button class='modal__button' data-value='Secondary text' data-modal-switch='slide'><i class='w-icon-chevron-right-light right'></i> Button</button>
+          </form>
+        </div>
+
+        <div class='modal__content' data-modal-name='slide'>
+          <button class='modal__button--action' data-modal-switch='action'>Action Button</button>
+          <div class='modal__button--group'>
+            <button class='modal__button' data-value='Secondary text'><i class='w-icon-chevron-right-light right'></i> Options</button>
+            <button class='modal__button' data-value='Secondary text'><i class='w-icon-chevron-right-light right'></i> Options</button>
+            <button class='modal__button' data-value='Secondary text'><i class='w-icon-chevron-right-light right'></i> Options</button>
+          </div>
           <button class='modal__button--action--delete'>Delete Button</button>
-        </form>
+        </div>
+
+        <div class='modal__content' data-modal-name='action'>
+          <button class='modal__button' data-value='Secondary text' data-modal-switch='progress'><i class='w-icon-chevron-right-light right'></i> Button</button>
+        </div>
+
+        <div class='modal__content' data-modal-name='progress'>
+          <h2 class='title'>1 of 3 steps left</h2>
+          <h3 class='subtitle'>You're almost there!</h3>
+        </div>
       </div>
     </div>
   </section>
